# PROJET-PHACAV

./: .gitignore  README.md  conftest.py  demo_planet_render.py  pyproject.toml  requirements.txt  setup.py  visualize_3d.py  visualize_planet_3d.py
Calcul_température/: Calcul_température.py  data_retriever.py  test_temperature.py
Calcul_température/data/: trappist1_planets.json
Livrables/: DiagrammeUml.md  plandesTests.md  workflow.md
examples/: fetch_exoplanet_data.py
src/: main.py
src/api/: README.md  __init__.py
src/atmosphere/: atmosphere.py
src/biome/: biomes.py
src/heightmap/Mercator/: main.py
src/heightmap/Mercator/config/: planet_config.py
src/heightmap/Mercator/terrain/: altitude.py  continents.py  mountains.py  projection.py  ridges.py
src/heightmap/Mercator/visualisation/: colormap.py  hillshade.py  render.py
src/hydro/: hydro.py
